--- a/VirtualWorld/Assets/Editor Default Resources/Dialog/VWVariables.uss
+++ b/VirtualWorld/Assets/Editor Default Resources/Dialog/VWVariables.uss
@@ -3,6 +3,30 @@
 	--vw-colors-grid-light-grey-1: #2b2b2b;
 	--vw-colors-grid-light-grey-2: rgba(51, 51, 51, 0.4);
 	--vw-colors-grid-light-grey-3: rgba(51, 51, 51, 1);
+	--vw-colors-window-dark-grey-1: #1D1D1E;
+	--vw-colors-window-dark-grey-2: #2B2D2F;
+	--vw-colors-window-dark-grey-3: #212325;
+	--vw-colors-window-dark-grey-4: #232527;
+	--vw-colors-window-dark-grey-5: #252729;
+	--vw-colors-window-dark-grey-6: #27292C;
+	--vw-colors-window-yellow: #FDD057;
 
 	--vw-metrics-grid-25: 25;
+	--vw-metrics-window-pixels-n12: -12px;
+	--vw-metrics-window-pixels-n4: -4px;
+	--vw-metrics-window-pixels-0: 0px;
+	--vw-metrics-window-pixels-2: 2px;
+	--vw-metrics-window-pixels-4: 4px;
+	--vw-metrics-window-pixels-6: 6px;
+	--vw-metrics-window-pixels-8: 8px;
+	--vw-metrics-window-pixels-11: 11px;
+	--vw-metrics-window-pixels-16: 16px;
+	--vw-metrics-window-pixels-25: 25px;
+	--vw-metrics-window-pixels-35: 35px;
+	--vw-metrics-window-pixels-80: 80px;
+	--vw-metrics-window-pixels-120: 120px;
+	--vw-metrics-window-pixels-160: 160px;
+	--vw-metrics-window-pixels-240: 240px;
+	--vw-metrics-window-pixels-600: 600px;
+	--vw-metrics-window-pixels-1000: 1000px;
 }
